--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fabricio-191/valve-server-query": "^4.1.9",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "@types/node": "18.16.3",
@@ -22,6 +23,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "steam-server-query-goldsrc-support": "^1.1.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
