--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.0",
     "@tanstack/react-query": "^4.29.5",
-    "@tanstack/react-query-devtools": "^4.29.6",
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "mongoose": "^7.1.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "realm-web": "^2.0.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "prisma": "^4.14.0"
+    "@tanstack/react-query-devtools": "^4.29.6",
+    "@types/node": "18.16.3",
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.5.0",
+    "eslint-config-next": "13.1.0",
+    "typescript": "5.0.4"
   }
 }
