--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
     "realm-web": "^2.0.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query-devtools": "^4.29.6",
     "@types/node": "18.16.3",
     "@types/react": "18.0.0",
