--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
     "realm-web": "^2.0.0",
+    "recharts": "^2.6.2",
     "tailwindcss": "3.3.2",
     "typeface-roboto": "^1.1.13"
   },
