--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-intersection-observer": "^9.4.3",
     "realm-web": "^2.0.0",
     "recharts": "^2.6.2",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typeface-roboto": "^1.1.13"
   },
