--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-toastify": "^9.1.3",
     "realm-web": "^2.0.0",
     "recharts": "^2.6.2",
     "sharp": "^0.32.1",
