--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.5.0",
     "eslint-config-next": "13.1.0",
+    "file-loader": "^6.2.0",
     "typescript": "5.0.4"
   }
 }
