--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "node ./scripts/generate-sitemap.js",
+    "postbuild": "node ./scripts/generate-sitemap.mjs",
     "start": "next start",
     "lint": "next lint"
   },
