--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ next-env.d.ts
 # build data from staticPaths to staticProps
 mainSlugBuildData.json
 .vscode/settings.json
+.vscode/settings.json
+/.vscode/settings.json
+/.vscode/
+/.vscode
