--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,8 @@ next-env.d.ts
 # build data from staticPaths to staticProps
 mainSlugBuildData.json
 .vscode/settings.json
-.vscode/settings.json
 /.vscode/settings.json
 /.vscode/
 /.vscode
+public/mainSlugBuildData.json
+/public/mainSlugBuildData.json
