--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query-devtools": "^4.29.6",
     "@types/node": "18.16.3",
