--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "frappe-charts": "^1.6.2",
     "fs": "^0.0.1-security",
     "next": "13.4.6",
     "path": "^0.12.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-frappe-charts": "^4.1.0",
     "react-intersection-observer": "^9.4.3",
     "react-toastify": "^9.1.3",
     "realm-web": "^2.0.0",
-    "recharts": "^2.6.2",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typeface-roboto": "^1.1.13"
@@ -39,6 +40,7 @@
     "eslint": "8.5.0",
     "eslint-config-next": "13.1.0",
     "file-loader": "^6.2.0",
+    "next-transpile-modules": "^10.0.1",
     "typescript": "5.0.4"
   }
 }
